# learningAPI

./: .env  docker-compose.yml  dockerfile  init_mongo.js  items_views.py  main.py  pyproject.toml  shop.db
api_v1/: __init__.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: db_helper.py  product.py
core/models/mongo_db/: database.py
users/: crud.py  schemas.py  views.py
